kubernetes/projects/apps/sure/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sure
  labels:
    istio.io/dataplane-mode: ambient
