kubernetes/projects/apps/sure/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sure
  namespace: sure
spec:
  parentRefs:
  - name: axolotl
    namespace: istio-ingress
  hostnames:
  - finance.axolotl.cloud
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: sure
      port: 80
